[gd_scene load_steps=4 format=3 uid="uid://drjvtf077me18"]

[ext_resource type="Theme" uid="uid://bcb6jx2yuewkc" path="res://ui_default_theme.tres" id="1_nkug2"]
[ext_resource type="Script" uid="uid://dy3whtjcw25a7" path="res://settings.gd" id="2_nkug2"]
[ext_resource type="Script" uid="uid://8m8loyfv40cj" path="res://volume_slider.gd" id="3_gc0em"]

[node name="Settings" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nkug2")
script = ExtResource("2_nkug2")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
custom_minimum_size = Vector2(200, 375)
layout_mode = 2

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -74.5
offset_top = -70.26
offset_right = 74.5
offset_bottom = -30.26
grow_horizontal = 2
grow_vertical = 0

[node name="Buttons" type="HBoxContainer" parent="CenterContainer/Panel/CenterContainer2"]
layout_mode = 2

[node name="X" type="Button" parent="CenterContainer/Panel/CenterContainer2/Buttons"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Close"

[node name="Control" type="Control" parent="CenterContainer/Panel/CenterContainer2/Buttons"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Menu" type="Button" parent="CenterContainer/Panel/CenterContainer2/Buttons"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Menu
"

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
offset_right = 1.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="CenterContainer/Panel/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Label4" type="Label" parent="CenterContainer/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Master"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterVolumeSlider" type="HSlider" parent="CenterContainer/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
max_value = 10.0
step = 0.5
script = ExtResource("3_gc0em")
bus_name = "Master"

[node name="Label2" type="Label" parent="CenterContainer/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="CenterContainer/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
max_value = 10.0
step = 0.5
script = ExtResource("3_gc0em")
bus_name = "Music"

[node name="Label3" type="Label" parent="CenterContainer/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "SFX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXVolumeSlider" type="HSlider" parent="CenterContainer/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
max_value = 5.0
step = 0.25
script = ExtResource("3_gc0em")
bus_name = "SFX"

[connection signal="pressed" from="CenterContainer/Panel/CenterContainer2/Buttons/X" to="." method="_on_x_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/CenterContainer2/Buttons/X" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/CenterContainer2/Buttons/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/CenterContainer2/Buttons/Menu" to="." method="_on_button_pressed"]
